# ipk-uebungen

./: konvex.cc  potenzen.cc  potenzen2.cc  potenzen3.cc  test.txt  wurzel.cc
Übung10/: CMakeLists.txt  frequencysource.hh  letterfrequencies.cc  letterfrequencies.hh
Übung4/: konvex.cc  vector.cc  vectorb.cc  vectorc.cc  vectord.cc  vectore.cc
Übung5/: CMakeLists.txt  mean.cc  median.cc  normal.cc  readvector.cc  stat  statistics.cc  statistics.hh  uniform.cc
Übung6/: CMakeLists.txt  canvas.cc  canvas.hh  point.cc  point.hh  polygon.cc  polygon.hh  votieren.txt
Übung7/: point.hh  statistics.hh
Übung8/pixelgraphik-solution/: CMakeLists.txt  canvas.hh  main.cc  point.cc  point.hh  polygon.hh  testcorners.cc  volumes.cc
